--- a/sparkles-hello-world/docker-compose.yml
+++ b/sparkles-hello-world/docker-compose.yml
@@ -46,6 +46,6 @@ services:
     # 仅更新reader与watchtower容器,如需其他自行添加 '容器名' ,如:reader watchtower nginx
     # --cleanup 更新后清理旧版本镜像
     # --schedule 自动检测更新 crontab定时(限定6位crontab) 此处代表凌晨4点整
-#volumes:
-#  reader:
+volumes:
+  reader:
 #  readerwebview:
